# Yggdrasil

./: README.md  inventory.txt  inventory_summary.txt
bifrost/: __init__.py
bifrost/cache/: __init__.py  clifford_kv_cache.py
bifrost/export/: __init__.py  onnx_export.py  trt_export.py
bifrost/quantization/: __init__.py  calibration.py  grade_quantize.py  mixed_precision.py
bifrost/serving/: __init__.py  clifford_api.py  openai_compat.py  server.py
bifrost/tests/: test_kv_cache.py  test_quantization.py  test_serving.py
forge/: __init__.py  param_utils.py
forge/data/: __init__.py  dataloader.py  tokenizer.py
forge/losses/: __init__.py  algebraic_consistency.py  cross_entropy.py  grade_entropy.py
forge/optimizers/: __init__.py  clifford_adam.py  clifford_grad_clip.py  clifford_sgd.py
forge/schedulers/: __init__.py  grade_warmup.py  warmup_cosine.py
forge/tests/: test_hlm125m_integration.py  test_losses.py  test_optimizer.py  test_training_loop.py
forge/training/: __init__.py  checkpointing.py  distributed.py  trainer.py
geoformer/: TinyHLMMoE_Colab.ipynb  TinyHLMMoE_Colab.py  TinyHLMMoE_VSCode.ipynb  TokenizedHLMv9_Colab.ipynb  TokenizedHLMv9_Colab.py  TokenizedHLMv9_LoRA.ipynb  TokenizedHLMv9_LoRA.py  TokenizedHLMv9_SFT.ipynb  __init__.py  build_tiny_notebook.py  chat.py  chat_cpu.py  chat_hlm_v9.py  config.py  convert_to_vscode.py  eval_checkpoint.py  hlm_v9_model_raw.py  model.py  package_for_cloud.py  smoke_test.py
geoformer/clifford/: __init__.py  algebra.py  ops.py
geoformer/inference/: __init__.py  generate.py  introspect.py
geoformer/layers/: __init__.py  blade_collapse.py  blade_projector.py  geo_attention.py  geo_ffn.py  norms.py  tou_memory.py
geoformer/moe_hlm/: __init__.py  config.py  holographic_expert.py  kaggle_train.py  model.py  router.py  smoke_test.py
geoformer/tou/: __init__.py  bank.py
geoformer/training/: __init__.py  cloud_train_geoformer.py  config.py  data.py  losses.py  run_short_baseline.py  train.py
geoformer/triton_kernels/: __init__.py  benchmarks.py  cayley_constants.py  cpu_profile.py  expert_gemm.py  fused_expert.py  geo_round.py  kaggle_bench_fused.py  kaggle_benchmark.py  kaggle_profile.py  moe_dispatch.py  test_fused.py  tests.py
holograph/: __init__.py  model.py
holograph/layers/: __init__.py  activations.py  clifford_attention.py  clifford_linear.py  clifford_router.py  density_field.py  normalization.py  positional_encoding.py  tou_layer.py
holograph/memory/: __init__.py  geometric_fold.py  grade_decay.py  holographic_memory_bank.py  memory_attention.py  memory_controller.py
holograph/models/: __init__.py  hlm.py  hlm_block.py  hlm_config.py
holograph/tests/: test_attention.py  test_backward_numerical.py  test_backward_pass.py  test_density_field.py  test_full_model.py  test_linear.py  test_memory_bank.py  test_model_wrapper.py
holograph/tou/: __init__.py  blades.py  primitives.py  tou_v2.py
mjolnir/: CMakeLists.txt  README.md
mjolnir/include/: cl3_ops.h  cl3_tables.h  cl3_types.h
mjolnir/src/cpu/: batch_ops.c  bivector_exp.c  geometric_product.c  grade_ops.c  sandwich.c
mjolnir/src/cuda/: batch_ops.cu  bivector_exp.cu  engine_ops.cuh  fused_kernels.cu  geometric_product.cu  grade_ops.cu  persistent_engine.cu  sandwich.cu
mjolnir/tests/: test_associativity.c  test_geometric_product.c  test_multiplication_table.c  test_sandwich.c
rune/: __init__.py  backend.py
rune/autodiff/: __init__.py  clifford_rules.py  engine.py  graph.py
rune/bindings/: __init__.py  mjolnir_cuda_ffi.py  mjolnir_ffi.py
rune/codegen/: __init__.py  backend_mjolnir.py  optimizer.py  tracer.py
rune/compiler/: __init__.py  codegen.py  compiled_model.py  ir.py  tracer.py
rune/compiler/passes/: __init__.py  fusion.py  grade_pruning.py  lower_fused_ops.py  memory_plan.py
rune/compiler/tests/: test_compiler.py  test_persistent_bridge.py
rune/engine/: __init__.py  cuda_engine.py  hlm_adapter.py  memory_pool.py  program.py  training_step.py
rune/ops/: __init__.py  batched.py  exponential.py  geometric_product.py  grade_projection.py  norms.py  products.py
rune/tests/: test_autodiff.py  test_geometric_product.py  test_grade_inference.py  test_numerical_grad.py  test_types.py
rune/types/: __init__.py  graded.py  multivector.py  tensor.py  type_checking.py
runtime_core/: CMakeLists.txt
runtime_core/include/: device.h  graph.h  memory_pool.h  scheduler.h  tape.h
runtime_core/python/: __init__.py  runtime.py
runtime_core/src/: device_cpu.cpp  device_cuda.cpp  fusion.cpp  graph.cpp  memory_pool.cpp  scheduler.cpp  tape.cpp
runtime_core/tests/: test_backward.cpp  test_fusion.cpp  test_graph.cpp  test_memory.cpp
